changes to api models and swaggeer documentation
